# RQ_ab_toolkit

./: .gitignore  CMakeLists.txt  README.md  reproduce.py  requirements.txt
configs/: effective_idw_e2m1h2_4.json  effective_idw_h2ln2e2.json  effective_idw_h2m1e2.json  effective_idw_h2m1m.json  effective_idw_mm1e2.json  effective_idw_mm1m.json  workload_e2ln1_21e2.json  workload_e2ln1_21h2_4.json  workload_h2_4ln1_21e2.json  workload_h2_4ln1_21h2_4.json  workload_lambda_alpha_grid_391.json  workload_mh2_41e2.json  workload_mh2_41h2_4.json  workload_mln1_21e2.json  workload_mln1_21h2_4.json  workload_mln1_41e2.json  workload_mln1_41h2_4.json  workload_mm1e2.json  workload_mm1h2_4.json  workload_mm1m.json  workload_tandem_e2h2_4_to_m1e2.json  workload_tandem_h2_4e2_to_m1h2_4.json
include/wck/common/: distributions.hpp  hash.hpp  json_config.hpp  mini_json.hpp  parallel.hpp
include/wck/idw_sim/: effective_idw_sim.hpp  effective_idw_sim_config.hpp
include/wck/rq_calibration/: b_calibration.hpp  w_table_interpolator.hpp
include/wck/wck_table/: solver.hpp  tridiag.hpp  types.hpp
include/wck/workload_sim/: tandem_workload_sim.hpp  tandem_workload_sim_config.hpp  workload_sim.hpp  workload_sim_config.hpp
rqab/: __init__.py  effective_idw.py  first.py  fixed_point.py  grids.py  idc.py  models.py  refined.py  runner.py  secondary.py  tables.py  util.py
rqab/plotting/: __init__.py  calibration_tripanel.py  diagnostics.py  first_calibration.py  idw_curves.py  ratio_panels.py  style.py
scripts/: generate_grid.py  plot_b_overlay.py  plot_c_heatmap.py  plot_first_b.py  plot_idw_effective.py  plot_ratio_panels.py  plot_refined_b.py  plot_w_tables.py  plot_w_tripanel.py  run_grid.py
src/common/: distributions.cpp  json_config.cpp  mini_json.cpp
src/idw_sim/: effective_idw_sim.cpp  effective_idw_sim_config.cpp  effective_idw_sim_main.cpp
src/rq_calibration/: b_calibration.cpp  calibrate_b_main.cpp  w_table_interpolator.cpp
src/wck_table/: main.cpp  solver.cpp  sweep_main.cpp  tridiag.cpp
src/workload_sim/: mc_common.hpp  tandem_workload_sim.cpp  tandem_workload_sim_config.cpp  workload_mc_main.cpp  workload_sim.cpp  workload_sim_config.cpp
tests/: helpers.py  support.hpp  test_b_calibration.cpp  test_effective_idw.py  test_effective_idw_sim.cpp  test_first_calibration_plot.py  test_refined_calibration_plot.py  test_reproduce.py  test_rq_grids.py  test_secondary_methods.py  test_solver.cpp  test_tandem_workload_sim.cpp  test_workload_sim.cpp
